k8s/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sep-dev-website
  namespace: sep-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sep-dev-website
  template:
    metadata:
      labels:
        app: sep-dev-website
    spec:
      containers:
        - name: sep-dev-website
          image: registry.sep.dev/sep-dev-website
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 2
            periodSeconds: 3
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
